fixed alignment

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ html {
     scroll-behavior: smooth;
 }
 
-h1.name {
+h1 {
     text-align: center;
 }
 
